...
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                Text.rich(
                  TextSpan(
                    children: [
                      TextSpan(
                        text: '국가',
                        style: AppTokens.textStyle(
                          fontSize: AppTokens.fontSize12,
                          fontWeight: AppTokens.fontWeightRegular,
                          color: AppTokens.text04,
                          letterSpacing: AppTokens.letterSpacingNeg03,
                          height: 1.40,
...
