...

  @override
  Widget build(BuildContext context) {
    debugPrint('[MyApp] build called');

    return MaterialApp.router(
      title: 'SafeTrip',
      debugShowCheckedModeBanner: false,
      theme: AppTheme.light,
      darkTheme: AppTheme.dark,
      themeMode: ThemeMode.system,
      localizationsDelegates: const [
        GlobalMaterialLocalizations.delegate,
...
